# frost-ui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WASM-INTEGRATION.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: SECURITY.md
scripts/: build-wasm.ps1  build-wasm.sh  build-xeddsa-wasm.sh  test-ceremony.ts  test-frostd.ts  test-zcash-ceremony-live.ts  test-zcash-ceremony.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/create-group/: page.tsx
src/app/sessions/: page.tsx
src/app/settings/: page.tsx
src/app/setup/: page.tsx
src/app/sign/: page.tsx
src/components/: providers.tsx
src/components/ui/: header.tsx  loading.tsx  modal.tsx  states.tsx  toast.tsx
src/lib/: store.ts
src/lib/crypto/: index.ts  keystore.ts  xeddsa.ts
src/lib/frost-backend/: ed25519.ts  index.ts  orchard.ts  types.ts
src/lib/frost-client/: client.ts  errors.ts  http-client.ts  index.ts  mock-client.ts  websocket-client.ts
src/lib/frost-wasm/: Cargo.toml  loader.ts
src/lib/frost-wasm/.cargo/: config.toml
src/lib/frost-wasm/pkg/: frost_wasm.d.ts  frost_wasm.js  frost_wasm_bg.wasm  frost_wasm_bg.wasm.d.ts  package.json
src/lib/frost-wasm/src/: lib.rs
src/lib/frost-zcash-wasm/: .gitignore  Cargo.toml  README.md  loader.ts
src/lib/frost-zcash-wasm/pkg/: frost_zcash_wasm.d.ts  frost_zcash_wasm.js  frost_zcash_wasm_bg.wasm  frost_zcash_wasm_bg.wasm.d.ts  package.json
src/lib/frost-zcash-wasm/src/: lib.rs
src/lib/hooks/: index.ts  useAuth.ts  useClient.ts  useFrost.ts  useFrostSession.ts  useKeyboardShortcuts.ts  useSigning.ts
src/lib/state-machines/: coordinator-machine.ts  index.ts  participant-machine.ts  validation.ts
src/lib/xeddsa-wasm/: .gitignore  Cargo.toml  loader.ts
src/lib/xeddsa-wasm/pkg/: package.json  xeddsa_wasm.d.ts  xeddsa_wasm.js  xeddsa_wasm_bg.wasm  xeddsa_wasm_bg.wasm.d.ts
src/lib/xeddsa-wasm/src/: lib.rs
src/types/: api.ts  frost.ts  index.ts  messages.ts
