[package]
name = "frost-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for FROST threshold signatures for Zcash"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# FROST cryptography for Zcash RedPallas (Orchard-compatible)
# reddsa provides frost::redpallas which uses frost-rerandomized internally
reddsa = { version = "0.5", features = ["frost", "serde"] }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Random number generation for WASM
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
rand_core = "0.6"

# Hex encoding
hex = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
